src/components/HomePage/HomeAbove/HomeAbove.module.scss
.homeWelcome {
    text-align: center;
    margin: 150px 105px 147px;
    position: relative;
    cursor: none;


    .welcomeHead {
        display: flex;
        align-items: center;
        gap: 14px;
        margin-bottom: 40px;
        justify-content: center;


        >div {
            display: flex;
            align-items: center;
            gap: 10px;
            border-radius: 50px;
            border: 1px solid #7E8D9C5E;
            color: #222222;
            font-weight: 500;
            font-size: 16px;
            line-height: 24px;
            padding: 5px 9px;


            .photosCont {
                display: flex;
                align-items: center;
                position: relative;


                div {
                    width: 24px;
                    height: 24px;
                    border-radius: 100%;
                    overflow: hidden;
                    position: relative;
                    border: 1px solid #FFFFFF;


                    img {
                        width: 100%;
                        height: 100%;
                        object-fit: cover;
                        border-radius: 100%;
                    }
                }


                div:not(:first-child) {
                    margin-left: -6px;
                    /* Controls the overlap */
                    // z-index: auto; /* Let it stack naturally */
                }
            }
        }
    }


    .welcomeText {
        color: #170F49;
        font-weight: 700;
        font-size: 60px;
        line-height: 61px;
        text-align: center;
        margin-bottom: 20px;
    }


    .welcomeSubText {
        color: #90A3BF;
        font-weight: 400;
        font-size: 20px;
        line-height: 30px;
        text-align: center;
        margin-bottom: 40px;
    }


    .button {
        width: max-content;
        margin: 0 auto;
        background-color: #7367FF;
        border-radius: 16px;
        padding: 15px 62px;
        color: white;
        font-size: 18px;
        font-weight: 400;
        line-height: 27px;
        border: none;
        cursor: none;
    }


    .button:hover {
        background-color: #0000FF;
        transition: 0.3s ease-in-out;
    }
}


.cursorSpan {
    white-space: nowrap;
    padding: 9px;
}


.eduFields {
    margin-bottom: 150px;


    .heading {
        color: #222222;
        font-size: 40px;
        font-weight: 600;
        line-height: 60px;
        text-align: center;
        margin-bottom: 40px;
    }


    .gridBox {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 20px;
        margin-bottom: 40px;
        transition: height 0.3s ease;
        overflow: hidden;



    .opened {
        // height: auto;
        opacity: 1;
        transform: scale(1);
    }


    .closed {
        // height: 0;
        // display: none;
        opacity: 0.7;
        transform: scale(0.98);
    }

        .box {
            background-color: white;
            display: flex;
            flex-direction: column;
            // align-items: center;
            justify-content: center;
            height: 236px;
            padding: 38px 26px;
            border-radius: 32px;
            cursor: default;
            border:1px solid transparent;
            transition: border-color 0.5s ease;

            &:hover {
                border-color: rgba(126, 141, 156, 0.368627451); // Hoverda rəng dəyişir
                cursor: pointer;
            }


            .boxHeading {
                font-weight: 600;
                font-size: 32px;
                line-height: 48px;
                color: #222222;
                margin-bottom: 10px;
            }



            .boxDesc {
                font-weight: 400;
                font-size: 16px;
                line-height: 24px;
                color: #7E8D9C;
                margin-bottom: 10px;
            }


            .boxBottom {
                display: flex;
                align-items: center;
                justify-content: space-between;


                .time {
                    display: flex;
                    align-items: center;
                    gap: 10px;


                    div {
                        padding: 10px 18px;
                        background-color: #7367FF;
                        color: #FEFEFE;
                        font-size: 16px;
                        font-weight: 400;
                        line-height: 24px;
                        border-radius: 12px;
                    }
                }


                .arrowCont {
                    width: 44px;
                    height: 44px;
                    border: none;
                    background-color: transparent;
                    cursor: pointer;

                    .arrowImg {
                        width: 100%;
                        height: 100%;
                        object-fit: cover;
                    }
                }
            }
        }


        .box:hover {
            border: 1px solid #7E8D9C5E;



            .boxHeading {
                color: #4A3AFF;
                transition: 0.3s ease;
            }
        }
    }


    >button {
        width: 65px;
        height: 65px;
        border: none;
        background-color: transparent;
        margin: 0 auto;
        cursor: pointer;
        display: flex;

        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
            justify-content: center;
        }
    }
}


.difCont {
    margin-bottom: 150px;
    color: #222222;

    .heading {
        font-weight: 600;
        font-size: 40px;
        line-height: 60px;
        margin-bottom: 40px;
        text-align: center;
    }


    .itemsContainer {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        margin: 20px 0;
      
        .row {
          display: flex;
          width: 100%;
          justify-content: center;
          margin-bottom: 52px;
      
          .item {
            flex-basis: calc(33.33% - 20px); /* 3 columns with 20px margin between */
            margin: 0px 20px;
            text-align: center;
            display: flex;
            flex-direction: column;
            align-items: center;
      
            .itemTitle {
              font-size: 28px;
              font-weight: 400;
              margin-bottom: 12px;
              color: #222222;
              line-height: 42px;
              max-width: 270px;
            }


            span {
                font-weight: 600;
                color: #4A3AFF;
            }
      
            .itemDescription {
              font-size: 16px;
              font-weight: 400;
              line-height: 24px;
              text-align: center;
              color: #222222;
            }
          }
      
        }
      }

}

.toggleButtonContainer {
    display: flex;
    justify-content: center;
    margin-bottom: 150px;
  
    .toggleButton {
        font-size: 25px;
        background-color: #4f46e5;
        color: white;
        border: none;
        border-radius: 50%;
        cursor: pointer;
        transition: background-color 0.3s ease;
        width: 48px;
        height: 48px;
        margin-top: 40px;
        display: flex
    ;
        align-items: center;
        justify-content: center;
  
      &:hover {
        background-color: #3c38b2;
        /* Hover rəngi */
      }
  
  
    }
  }

